style.css
/* Copyright 2024 Jay Lang
 * SPDX-License-Identifier: AGPL-3.0-or-later
 */

/* STYLING */

/* Fonts: everything uses Roboto */
body {
    font-family: 'Roboto', Verdana, sans-serif;
}

/* Header and footer are dark, and use a white text color to compensate */
.blue-background {
    background-color: #1F2937;
    color: #E5E7EB;
    font-size: 18px;
}

.header-logo-text {
    font-size: 24px;
    font-weight: bold;
    color: #F9FAF8;
}

/* The testimonial uses a light gray background and BIG fonts */
.gray-background {
    background-color: #E5E7EB;
}

.testimonial-quote {
    font-size: 36px;
    font-weight: light;
    font-style: italic;
}

.testimonial-attribution {
    font-size: 18px;
    font-weight: bold;
}

.curved-border {
    border-radius: 10px;
}


/* Button! */
.button {
    display: inline-block;
    padding: 8px 24px;

    background-color: #2655a0;
    color: #E5E7EB;
    text-decoration: none;
    font-weight: bold;
}

/* Images in the how-to area have special borders */
.how-to img {
    border-width: 5px;
    border-color: #3882f6;
    border-style: solid;
}

/* LAYOUT */

/* Control whether things have margin or not. Default no. */
* {
    margin: 0px;
}

/* Forcefully put it back if you need it */
.with-margin {
    margin: 8px 24px;
}

.extra-margin-below {
    margin-bottom: 36px;
}

.blue-background {
    padding: 8px 24px;
}

.extra-padding {
    padding: 100px 100px;
}

/* Centered things should be centered */
.centered {
    display: block;
    text-align: center;
}

/* Lists don't have any left bullet or padding to them, since 
 * we primarily use these in FlexBoxes.
 */
ul {
    list-style-type: none;
    padding: 0px;
}

/* Welcome area. It's got two flex boxes to the sides which try and
 * take up any extra space on wide screens
 */
.welcome-container {
    display: flex;
    justify-content: center;
}

/* Any additional space on the outside of the welcome is distributed
 * evenly to padding <div>s
 */
.padding {
    flex: auto;
}

/* Header area. Flex layout with space in the middle */
.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
}

/* Banner! First decide an ideal size for the glamour shot */
.banner img {
    max-width: 400px;
    max-height: 300px;
    width: 100%;
    height: auto;
}

/* Banner content should be allowed to wrap
 * i.e., the image should be allowed to sit below the text on small screens
 */
.banner {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

/* The hero text should not get too wide. */
.hero {
    max-width: 500px;
}

/* Now for the how-to! */

.how-to ul {
    display: flex;
    justify-content: center;
    align-items: top;
    flex-wrap: wrap;
    gap: 50px;
}

.how-to li {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 200px;
}

.how-to img {
    display: block;
    width: 200px;
    height: 200px;
}

/* Testimonial */
.testimonial {
    display: flex;
    justify-content: center;
}

.testimonial-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.testimonial-quote {
    max-width: 1000px;
}

.testimonial-attribution {
    align-self: flex-end;
}

